--- a/index.css
+++ b/index.css
@@ -21,6 +21,7 @@ header {
     color: #fff;
     transform: translateZ(0);
     transition-timing-function: ease-in;
+    padding: 0 0 1.666rem 0;
 }
 header.hide {
     transform: translateX(-100%);
@@ -32,42 +33,91 @@ header.show {
     transition: transform;
     transition-duration: 1s;
 }
-header h3 {
+header h1 {
     text-align: center;
     background: #000;
     font-size: 1.666rem;
     color: #f90;
-    height: 4.444rem;
+    height: 4.20rem;
     vertical-align: middle;
-    line-height: 4.444rem;
+    line-height: 4.20rem;
 }
+
+header h3 {
+    text-align: center;
+    font-size: 1.333rem;
+    vertical-align: middle;
+    line-height: 1.666rem;
+}
+
 header h4 {
-    text-align: left;
+    text-align: center;
     font-size: 1.333rem;
     padding: 0.111rem 1.111rem;
 }
 header p {
     text-align: center;
-    padding: 1.111rem 0;
+    padding: 0.111rem 3rem;
+    margin-top: 0.333rem;
 }
 
 .video-url {
+    text-align: center;
+    border-radius: 0.333rem;
     display: block;
     margin: 0.333rem auto;
+    padding: 0.2rem 0.5rem;
     width: 88.8vw;
     font-size: 1.666rem;
+    background: #363636;
+    color: #cacaca;
+    border: none;
+}
+
+header label {
+    display: block;
+    margin: auto;
+    text-align: center;
+    padding: 0.666rem 0;
+}
+
+header button {
+    text-align: center;
+    border-radius: 0.333rem;
+    display: block;
+    margin: 0.333rem auto;
+    padding: 0.5rem 1.5rem;
+    width: auto;
+    font-size: 1.666rem;
+    background: #363636;
+    color: #cacaca;
+    border: none;    
+}
+
+header button:hover {
+    background: #3f3f3f;
 }
 
 #hamburger {
     position: absolute;
+    left: 0;
+    top: 0;
     background: #000;
-    margin: 0.666rem 0.333rem;
+    margin: 0.333rem;
     padding: 0.1rem 0.3rem;
     font-size: 3.333rem;
     color: #f90;    
     z-index: 666;
     cursor: pointer;
 }
+
+.save-load-container  {
+    display: flex;
+}
+
+.save-load-container button {
+}
+
 main {
     display: grid;
     grid-template-columns: auto auto;
@@ -82,21 +132,22 @@ main {
 main iframe {
     width: 100%;
 }
-main iframe:hover {
+main.resizable-on-hover iframe:hover {
     transition: transform 0.666s;
 }
-main iframe:hover:nth-child(1) {
+main.resizable-on-hover iframe:hover:nth-child(1) {
     transform: scale(1.3) translateX(30%) translateY(50%) translateZ(0);
 }
-main iframe:hover:nth-child(3) {
+main.resizable-on-hover iframe:hover:nth-child(3) {
     transform: scale(1.3) translateX(30%) translateY(-50%) translateZ(0);
 }
-main iframe:hover:nth-child(2) {
+main.resizable-on-hover iframe:hover:nth-child(2) {
     transform: scale(1.3) translateX(-30%) translateY(50%) translateZ(0);
 }
-main iframe:hover:nth-child(4) {
+main.resizable-on-hover iframe:hover:nth-child(4) {
     transform: scale(1.3) translateX(-30%) translateY(-50%) translateZ(0);
 }
+
 
 @media screen and (orientation:portrait) {
     html {
@@ -107,6 +158,5 @@ main iframe:hover:nth-child(4) {
     }
     #hamburger {
         font-size: 3rem;
-        margin: 2.6rem 1.333rem;
     }
 }
