--- a/index.css
+++ b/index.css
@@ -150,6 +150,23 @@ main.resizable-on-hover iframe:hover:nth-child(4) {
 }
 
 
+main.scale-on-hover iframe:hover {
+    transition: transform 0.666s;
+}
+main.scale-on-hover iframe:hover:nth-child(1) {
+    transform: scale(1.5) translateX(15%) translateY(15%) translateZ(0);
+}
+main.scale-on-hover iframe:hover:nth-child(3) {
+    transform: scale(1.5) translateX(15%) translateY(-15%) translateZ(0);
+}
+main.scale-on-hover iframe:hover:nth-child(2) {
+    transform: scale(1.5) translateX(-15%) translateY(15%) translateZ(0);
+}
+main.scale-on-hover iframe:hover:nth-child(4) {
+    transform: scale(1.5) translateX(-15%) translateY(-15%) translateZ(0);
+}
+
+
 @media screen and (orientation:portrait) {
     html {
         font-size: 24px;
