--- a/src/app/fate/fate.component.less
+++ b/src/app/fate/fate.component.less
@@ -4,5 +4,11 @@ section.wrapper {
   top: 0;
   right: 0;
   bottom: 0;
-  background: gold;
+  display: grid;
+  grid-template-columns: auto auto;
+  video {
+    background: blue;
+    border: 1px solid black;
+    width: 100%;
+  }
 }
