--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+html, body {
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
+}
+body {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+}
+app-root {
+  margin: 0;
+  padding: 0;
+}
