--- a/src/app/fate/fate.component.html
+++ b/src/app/fate/fate.component.html
@@ -1,3 +1,3 @@
-<section class="wrapper">
+<section class="wrapper {{containerClassAttr}}">
   <video *ngFor="let video of videos"></video>
 </section>
